# screen_reader_tts

./: .gitignore  README.md  index.html  model_registry.json  package-lock.json  package.json  toolbar.html  tsconfig.json  vite.config.ts
.claude/: settings.local.json
docs/: DESIGN_SPEC.md  IPC_API.md  learnings.md
scripts/: package_portable.py  sync-version.js
src/: main.ts  styles.css  toolbar.css  toolbar.ts
src-tauri/: Cargo.toml  tauri.base.conf.json  tauri.conf.json
src-tauri/binaries/: README.txt
src-tauri/src/: kyutai_local.rs  lib.rs  main.rs  voicereader_core.rs
tts-engine/: README.md  pyproject.toml  requirements.txt  sidecar_entry.py
tts-engine/scripts/: build_sidecar.py  prefetch_models.py  run_smoke_with_engine.ps1  run_smoke_with_engine.py  run_stream_play_with_engine.ps1  run_stream_play_with_engine.py  smoke_test.ps1  smoke_test.py  stream_play_queue_test.py  stream_play_test.ps1
tts-engine/src/tts_engine/: app.py  auth.py  chunking.py  config.py  constants.py  errors.py  jobs.py  main.py  model_store.py  schemas.py  synth.py  voices.py
tts-engine/tests/: test_api.py  test_chunking.py  test_model_store.py
