[package]
name = "voicereader-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
futures-util = "0.3"
portpicker = "0.1"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = [ "global-shortcut-all", "clipboard-read-text", "global-shortcut", "shell-open"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4"], optional = true }
pocket-tts = { version = "0.2.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
build-full = []
build-base = ["dep:uuid", "dep:pocket-tts"]
